Changed the steps for all recipes to follow an ordered list; perhaps change the space margin in the future

--- a/chicken-sandwich-recipe.html
+++ b/chicken-sandwich-recipe.html
@@ -28,14 +28,17 @@
         <li>6 soft sammy buns, such as soft burger rolls, split</li>
     </ul>
     <h2>Directions</h2>
-    <h3>Step 1:</h3>
-    <p>Bring liquids to a simmer in a small to medium skillet and slide in the chicken breast meat. Gently poach the chicken 10 minutes, turning once about after 5 minutes.</p>
-    <h3>Step 2:</h3>
-    <p>While chicken poaches, heat a second medium skillet over medium low heat. To hot skillet, add extra-virgin olive oil and garlic and onion and gently saute until chicken is ready to come out of poaching liquids. Combine the next 5 ingredients in a medium bowl and reserve. </p>
-    <h3>Step 3:</h3>
-    <p>When the chicken has cooked through, add 2 ladles of the cooking liquid to the bowl, combining with the sauces, spices, brown sugar and tomato paste. Once the liquids and seasonings are combined, remove chicken, slice it, and transfer to the medium bowl. Using 2 forks, shred the chicken and combine with the liquids. Add the shredded chicken to the onions and garlic and combine well. Simmer together 5 to 10 minutes, using extra cooking liquids to make your chicken as saucy as you like. </p>
-    <h3>Step 4:</h3>
-    <p>Combine sour and sweet pickles in a small bowl. Split rolls and fill with scoops of shredded chicken. Top with pickle relish and serve.</p>
-    
+    <ol>
+        <li>Bring liquids to a simmer in a small to medium skillet and slide in the chicken breast meat. Gently poach the chicken 10 minutes, turning once about after 5 minutes.</li>
+        <!-- Fix spacing in the future! -->
+        <li>While chicken poaches, heat a second medium skillet over medium low heat. To hot skillet, add extra-virgin olive oil and garlic and onion and gently saute until chicken is ready to come out of poaching liquids. Combine the next 5 ingredients in a medium bowl and reserve.</li>
+
+        <li>When the chicken has cooked through, add 2 ladles of the cooking liquid to the bowl, combining with the sauces, spices, brown sugar and tomato paste. Once the liquids and seasonings are combined, remove chicken, slice it, and transfer to the medium bowl. Using 2 forks, shred the chicken and combine with the liquids. Add the shredded chicken to the onions and garlic and combine well. Simmer together 5 to 10 minutes, using extra cooking liquids to make your chicken as saucy as you like.</li>
+
+        <li>Combine sour and sweet pickles in a small bowl. Split rolls and fill with scoops of shredded chicken. Top with pickle relish and serve.</li>
+
+    </ol>
+    <p></p>
+    <p><a href="index.html">Return to homepage</a></p>
 </body>
 </html>
