--- a/cake-recipe.html
+++ b/cake-recipe.html
@@ -18,25 +18,28 @@
         <li> 1 3/4 teaspoons baking powder</li>
         <li>1/2 cup milk</li>
     </ul>
-    <h2>Directions</h2>
-    <h3>Step 1:</h3>
-    <p>Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9-inch square cake pan.</p>
-    <img src="https://www.allrecipes.com/thmb/31mQQudVQgVFtOAvRGKSbod1LFg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simple-white-cake-ddmfs-3244-4x3-step-01-fa37ca03cdcc4b078afa2c1a0a961650.jpg" alt="Ingredients">
-    <h3>Step 2:</h3>
-    <p>Cream sugar and butter together in a mixing bowl. Add eggs, one at a time, beating briefly after each addition. Mix in vanilla.</p>
-    <img src="https://www.allrecipes.com/thmb/aFat7eqIsvz0s-Ev75-bow77EIs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simpl-white-cake-mfs-003-8f86146a582c4e81871f813c1dca9709.jpg" alt="Mixing eggs">
-    <h3>Step 3:</h3>
-    <p>Combine flour and baking powder in a separate bowl. Add to the wet ingredients and mix well. Add milk and stir until smooth.</p>
-    <img src="https://www.allrecipes.com/thmb/7_X7fUMOLZoRX-2Wv3kCH6ZRggc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simpl-white-cake-mfs-005-1a111e2a4fdd4c4595a0a9774efe340c.jpg" alt="Stirring the ingredients">
-    <h3>Step 4:</h3>
-    <p>Pour batter into the prepared cake pan.</p>
-    <img src="https://www.allrecipes.com/thmb/oOFlFmgabRiFGIFXlk1XJ4V1pg0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simpl-white-cake-mfs-007-1082b3cb66d146b2b1ccaab4020468f3.jpg" alt="Pouring batter into pan">
-    <h3>Step 5:</h3>
-    <p>Bake in the preheated oven until the top springs back when lightly touched, 30 to 40 minutes.</p>
-    <img src="https://www.allrecipes.com/thmb/YJhSJO4OMiCKmufTkgEQmThBIco=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simpl-white-cake-mfs-006-d914106a241548abb664657e8b27fa47.jpg" alt="Baked cake">
-    <h3>Step 6:</h3>
-    <p>Remove from the oven and cool completely. Frost and enjoy!</p>
-    <img src="https://www.allrecipes.com/thmb/59OSrdhzFypyNdLt3b-vw-MqSPY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simple-white-cake-DDMFS-4x3-89bf9ff32d0c40179a3d752d4d25f22a.jpg" alt="Cake with frost topping">
-    
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9-inch square cake pan.</li>
+        <img src="https://www.allrecipes.com/thmb/31mQQudVQgVFtOAvRGKSbod1LFg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simple-white-cake-ddmfs-3244-4x3-step-01-fa37ca03cdcc4b078afa2c1a0a961650.jpg" alt="Ingredients">
+        
+        <li>Cream sugar and butter together in a mixing bowl. Add eggs, one at a time, beating briefly after each addition. Mix in vanilla.</li>
+        <img src="https://www.allrecipes.com/thmb/aFat7eqIsvz0s-Ev75-bow77EIs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simpl-white-cake-mfs-003-8f86146a582c4e81871f813c1dca9709.jpg" alt="Mixing eggs">
+
+        <li>Combine flour and baking powder in a separate bowl. Add to the wet ingredients and mix well. Add milk and stir until smooth.</li>
+        <img src="https://www.allrecipes.com/thmb/7_X7fUMOLZoRX-2Wv3kCH6ZRggc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simpl-white-cake-mfs-005-1a111e2a4fdd4c4595a0a9774efe340c.jpg" alt="Stirring the ingredients">
+
+        <li>Pour batter into the prepared cake pan.</li>
+        <img src="https://www.allrecipes.com/thmb/oOFlFmgabRiFGIFXlk1XJ4V1pg0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simpl-white-cake-mfs-007-1082b3cb66d146b2b1ccaab4020468f3.jpg" alt="Pouring batter into pan">
+
+        <li>Bake in the preheated oven until the top springs back when lightly touched, 30 to 40 minutes.</li>
+        <img src="https://www.allrecipes.com/thmb/YJhSJO4OMiCKmufTkgEQmThBIco=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simpl-white-cake-mfs-006-d914106a241548abb664657e8b27fa47.jpg" alt="Baked cake">
+
+        <li>Remove from the oven and cool completely. Frost and enjoy!</li>
+        <img src="https://www.allrecipes.com/thmb/59OSrdhzFypyNdLt3b-vw-MqSPY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/17481-simple-white-cake-DDMFS-4x3-89bf9ff32d0c40179a3d752d4d25f22a.jpg" alt="Cake with frost topping">
+
+    </ol>
+
+    <p><a href="index.html">Return to homepage</a></p>
 </body>
 </html>
